<resources>
    <string name="app_name">JobtesKotlin</string>
    <string name="title_activity_jobtes">jobtesActivity</string>
    <string name="title_home">Home</string>
    <string name="masuk">Masuk</string>
    <string name="title_akun">Akun</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="content_description_end_icon">content_description_end_icon</string>
</resources>