<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/biru"
    android:orientation="vertical"
    tools:context=".ui.member.login.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_500sdp"
        android:layout_weight="1"
        android:background="@color/biru"
        android:gravity="center">

        <ImageView
            android:layout_width="265dp"
            android:layout_height="195dp"
            android:src="@drawable/login2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bg_gradasi"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_23sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/quicksand_bold"
            android:text="Login"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/hitampudar"
            android:textSize="@dimen/_20sdp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_23sdp"
            android:fontFamily="@font/quicksand_bold"
            android:text="Masukkan username dan kata sandimu"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconContentDescription="@string/content_description_end_icon"
                app:startIconDrawable="@drawable/ic_baseline_account_circle_24">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_textEmailmember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:passwordToggleEnabled="true"
                app:startIconContentDescription="@string/content_description_end_icon"
                app:startIconDrawable="@drawable/ic_outline_lock_24">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_textPasswordmember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLength="16" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLoginmember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/bg_gradasiatasabawah"
                android:text="Login"
                android:textColor="@color/white"
                app:backgroundTint="@color/black" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>