<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/biru"
    android:orientation="vertical"
    tools:context=".ui.admin.create_member.Create_memberActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_weight="1"
                android:background="@color/biru"
                android:gravity="center">


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_gradasi"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_23sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="Tambah Member"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/hitampudar"
                    android:textSize="@dimen/_20sdp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_23sdp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="Silakan daftarkan member"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/hitampudar"
                    android:textSize="@dimen/_10sdp"
                    tools:ignore="MissingConstraints" />

                <LinearLayout
                    android:id="@+id/linearlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:startIconContentDescription="@string/content_description_end_icon"
                        app:startIconDrawable="@drawable/ic_akun">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_textNamacreate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nama"
                            android:inputType="textEmailAddress"
                            android:lines="1"
                            android:maxLength="16" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/bg_btn_lapisanabu">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="@dimen/_20sdp"
                                android:layout_height="@dimen/_20sdp"
                                android:layout_gravity="center"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:layout_marginTop="@dimen/_5sdp"
                                android:src="@drawable/ic_baseline_date_range_24"
                                app:tint="@color/abuabupudar" />

                            <TextView
                                android:id="@+id/edt_tanggalcreate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:layout_marginEnd="@dimen/_5sdp"
                                android:layout_marginStart="@dimen/_8sdp"
                                android:background="@color/white"
                                android:hint="Tanggal Lahir"
                                android:textStyle="bold"
                                android:textSize="@dimen/_11sdp" />

                        </LinearLayout>

                    </RelativeLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:startIconContentDescription="@string/content_description_end_icon"
                        app:startIconDrawable="@drawable/ic_baseline_location_on_24">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_textALamatcreate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/alamat"
                            android:inputType="textEmailAddress"
                            android:lines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/quicksand_bold"
                        android:text="Pilih Gender" />

                    <RadioGroup
                        android:id="@+id/radio_jk_create"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio_lakilakicreate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="L" />

                        <RadioButton
                            android:id="@+id/radio_perempuancreate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="P" />

                    </RadioGroup>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:startIconContentDescription="@string/content_description_end_icon"
                        app:startIconDrawable="@drawable/ic_baseline_account_circle_24">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_textusernamecreate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:inputType="textEmailAddress"
                            android:lines="1"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        app:counterEnabled="true"
                        app:counterMaxLength="16"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:passwordToggleEnabled="true"
                        app:startIconContentDescription="@string/content_description_end_icon"
                        app:startIconDrawable="@drawable/ic_lock_black_24dp">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_textPasswordcreate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:lines="1"
                            android:maxLength="16" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        app:counterEnabled="true"
                        app:counterMaxLength="16"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:passwordToggleEnabled="true"
                        app:startIconContentDescription="@string/content_description_end_icon"
                        app:startIconDrawable="@drawable/ic_lock_black_24dp">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_textKonfirmasiPasswordcreate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password_confirmation"
                            android:inputType="textPassword"
                            android:lines="1"
                            android:maxLength="16" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btncreatemember"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/bg_gradasiatasabawah"
                        android:text="Tambah"
                        android:textColor="@color/white"
                        app:backgroundTint="@color/biru" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>