<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/kuning"
            android:orientation="vertical"
            android:background="@drawable/bg_gradasibawah">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="Update Profil"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/quicksand_semi_bold"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textSize="@dimen/_16sdp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_50sdp">


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_100sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_gradasi"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:startIconContentDescription="@string/content_description_end_icon"
                        app:startIconDrawable="@drawable/ic_akun">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_textNamaupdateadmin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nama"
                            android:inputType="textEmailAddress"
                            android:lines="1"
                            android:maxLength="16" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:startIconContentDescription="@string/content_description_end_icon"
                        app:startIconDrawable="@drawable/ic_baseline_account_circle_24">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_textUsernameupdateadmin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:inputType="textEmailAddress"
                            android:lines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:background="@drawable/bg_btn_lapisanabu">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="@dimen/_20sdp"
                                android:layout_height="@dimen/_20sdp"
                                android:layout_gravity="center"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:layout_marginTop="@dimen/_5sdp"
                                android:src="@drawable/ic_baseline_date_range_24"
                                app:tint="@color/abuabupudar" />

                            <TextView
                                android:id="@+id/edt_tanggalupdate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_10sdp"
                                android:layout_marginEnd="@dimen/_5sdp"
                                android:layout_marginStart="@dimen/_8sdp"
                                android:background="@color/white"
                                android:hint="Tanggal Lahir"
                                android:textStyle="bold"
                                android:textSize="@dimen/_11sdp" />

                        </LinearLayout>

                    </RelativeLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:startIconContentDescription="@string/content_description_end_icon"
                        app:startIconDrawable="@drawable/ic_baseline_location_on_24">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_textAlamatupdateadmin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/alamat"
                            android:inputType="textEmailAddress"
                            android:lines="1" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/quicksand_bold"
                        android:text="Pilih Gender" />

                    <RadioGroup
                        android:id="@+id/radio_JKadmin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio_lakilakiadmin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="L" />

                        <RadioButton
                            android:id="@+id/radio_perempuanadmin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="P" />

                    </RadioGroup>

                    <Button
                        android:id="@+id/btnupdateadmin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/bg_gradasiatasabawah"
                        android:text="Update"
                        android:textColor="@color/white"
                        app:backgroundTint="@color/black" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>